# pg_task_scheduler

./: .env.example  .gitignore  Cargo.toml  Concurrency.md  LICENSE  README.md  SchedulerDesign.md  compose.yml
.github/workflows/: ci.yml
docs/: SchedulerDesign.md
migrations/0001_create_scheduler_tables/: down.sql  up.sql
src/: admin.rs  cron.rs  error.rs  ids.rs  jobs.rs  lib.rs  metrics.rs  models.rs  pool.rs  queue.rs  schema.rs
src/runtime/: builder.rs  context.rs  health.rs  mod.rs  registry.rs  worker.rs
src/store/: claim.rs  finalize.rs  inspect.rs  materialize.rs  mod.rs  reap.rs
tests/: admin.rs  claim.rs  end_to_end.rs  finalize.rs  harness_smoke.rs  identifier_checks.rs  inspect.rs  jobs.rs  lease_duration.rs  materialize.rs  performance.rs  queue.rs  reap.rs  shutdown.rs
tests/common/: mod.rs
