[package]
name = "pg_task_scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
diesel = { version = "2.2", default-features = false, features = ["postgres_backend", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
diesel-derive-newtype = "2"
scoped-futures = "0.1"
croner = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
tokio-util = "0.7"
futures = "0.3"
gnort = { version = "0.2", optional = true }  # plan specified 0.4; crates.io only has 0.2 — CONCERN: update when 0.4 ships
axum = { version = "0.7", optional = true }

[features]
default = ["deadpool"]
deadpool = ["diesel-async/deadpool"]
bb8 = ["diesel-async/bb8"]
mobc = ["diesel-async/mobc"]
metrics = ["dep:gnort"]
axum = ["dep:axum"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
